# risc-v-cpu

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  instruction_decoder.sv  instruction_decoder.v  memory.sv  memory.v  memory_init.mem  microcode.mem  microcode_buffer.sv  registers.sv  registers.v  risc-v-core.sv  risc-v-core.v  rom.sv  rom.v  sim_inputs.vwf  wavedrom.txt
.github/workflows/: pre-commit.yaml
c_program/: Makefile  linker.ld  main.c
design/: Makefile  README.md  alu.sv  control_unit.sv  cpu.sv  data_dep_detector.sv  instruction_data.sv  instruction_data_decoder.sv  instruction_decoder.sv  lpm_ram_dq.sv  memory.sv  memory_init.mem  microcode.mem  microcode.sv  microcode_decoder.sv  mmio.sv  mmu.sv  mmu_decode.sv  mmu_encode.sv  pre_alu.sv  pre_writeback.sv  registers.sv  risc-v-core.sv  rom.sv  uart_rx.sv  uart_tx.sv  upload_rx.sv
design/tests/: tb_cpu.sv
docs/: branching.md  data-dependency.md  memory-fetch-conflict.md  memory_map.md  microcode.md  stages.md
docs/wavedrom/: failed-branch-condition.json  memory-fetch-conflict.json  s1-data-dependency.json  s2-data-dependency.json  s3-data-dependency.json  successful-branch.json
eeprom_writer/: eeprom_writer.ino
src/: README.md  create_mem_init.rs  generate_microcode.rs  main.rs  uart_listener.rs  upload_program.rs  write_eeprom.rs  write_executable.rs
src/microcode/: generators.rs  mod.rs  signals.rs
