[package]
name = "risc-v-cpu-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
serialport = "4.3.0"
sudo = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
